@@ -77,6 +77,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14132: Fix urllib.request redirect handling when the target only has
+  a query string.  Fix by Ján Janech.
+
 - Removed the requirements for the ctypes and modulefinder modules to be
   compatible with earlier Python versions.
 
